Fix footer newsletter input size on iOS

--- a/app/assets/stylesheets/modules/footer.sass
+++ b/app/assets/stylesheets/modules/footer.sass
@@ -46,7 +46,7 @@ footer
 
       .newsletter-input
         float: left
-        width: 190px
+        width: 160px
         height: 28px
         margin: 0
         box-shadow: none
@@ -54,6 +54,9 @@ footer
         top: 0px
         position: relative
         border-radius: $button-radius 0 0 $button-radius
+        @media #{$medium}
+          width: 190px
+
       .button
         float: left
         height: 28px
